# kata

./: .gitignore  .pre-commit-config.yaml  Brewfile  CMakeLists.txt  LICENSE  Makefile
algorithms/: CMakeLists.txt
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt  lcs_test.cpp
